# segmentlist

./: Cargo.toml  LICENSE  README.md  pyproject.toml  segment_list.py  test_segment_list.py
.github/workflows/: python-tests.yml
src/: lib.rs
